tests/baselines/reference/parserModifierOnStatementInBlock2.errors.txt
parserModifierOnStatementInBlock2.ts(2,4): error TS1184: Modifiers cannot appear here.
parserModifierOnStatementInBlock2.ts(2,20): error TS1039: Initializers are not allowed in ambient contexts.


==== parserModifierOnStatementInBlock2.ts (2 errors) ====
    {
       declare var x = this;
       ~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
                       ~~~~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    }
    